# MediaSink

./: .dockerignore  .env.local  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  build.sh  docker-compose.yml  go.mod  go.sum  install-onnxruntime.sh  main.go  package-lock.json  run.sh  test.sh  update_deps.sh
app/: app.go  request.go  wire.go  wire_gen.go
cli/: .gitignore  Cargo.toml  README.md  package.json
cli/src/: api.rs  config.rs  main.rs  player_mode.rs  selection.rs  serde_ext.rs
cli/src/app/: latest_filter.rs  mod.rs  nav.rs  random_filter.rs  stream_groups.rs  view_state.rs
cli/src/overlays/: channel_editor.rs  channel_popup.rs  enhance_form.rs  help_popup.rs  item_actions.rs  mod.rs  player_mode_picker.rs  video_player.rs
cli/src/tui/: app_core.rs  input.rs  layout.rs  messages.rs  mod.rs  render.rs  runtime.rs  support.rs
cli/src/ui/: background.rs  chrome.rs  mod.rs  popup_shell.rs  text_input.rs  theme.rs  theme_picker.rs  thumbnail.rs  ui_regions.rs
conf/: conf.go
config/: config.go
controllers/: frontend.go  router.go
database/: channel.go  channel_id.go  channel_name.go  channel_name_test.go  db.go  frame_vectors.go  frame_vectors_test.go  job.go  job_test.go  recording.go  setting.go  testmain_test.go  video_analysis.go  video_previews.go
docs/: THRESHOLD_GUIDE.md  VIDEO_ANALYSIS_API.md
frontend/: .gitignore  index.html  package.json  swagger.js
helpers/: video.go
jobs/: executor.go  lifecycle.go  types.go  workers.go
middlewares/: authentication_middleware.go
network/: SocketEvent.go
queries/: sort.go
(+235 files in other folders)
